--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "paper-card": "PolymerElements/paper-card#~1.0.7",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
     "clipboard": "~1.5.3",
-    "paper-toast": "PolymerElements/paper-toast#~1.0.0"
+    "paper-toast": "PolymerElements/paper-toast#~1.0.0",
+    "color-thief": "~2.0.1"
   }
 }
