--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
-    "name": "figme",
-    "version": "0.0.1",
-    "description": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "bower install"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.4",
-        "grunt-contrib-clean": "^0.6.0",
-        "grunt-contrib-connect": "^0.11.2",
-        "grunt-contrib-copy": "^0.8.1",
-        "grunt-contrib-htmlmin": "^0.4.0",
-        "grunt-contrib-watch": "^0.6.1",
-        "grunt-vulcanize": "^1.0.0",
-        "load-grunt-tasks": "~0.2.0"
-    }
+  "name": "figme",
+  "version": "2.0.0",
+  "repository": "git@github.com:maxigimenez/figme.git",
+  "author": "Maxi Gimenez <gimenez.maxi@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "react": "^15.6.1",
+    "react-clipboard.js": "^1.1.2",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-tooltip": "^3.4.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^0.11.2",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-merge": "^4.1.1"
+  },
+  "scripts": {
+    "dev": "webpack-dev-server --progress --colors",
+    "build": "BUILD_DEV=false webpack --config ./webpack.production.config.js"
+  }
 }
